@@ -8,6 +8,7 @@
 	FIXED - "Strange" characters (e.g. /) in NODE and LINK names broke the imagemap.
 	FIXED - Map Style settings in editor were broken after internal defaults changes
 	FIXED - Imagemap no longer contains areas with no href defined
+	FIXED - SPLITPOS was ignored with VIASTYLE angled (thanks to uhtred)
 	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
 	ADDED - Maps can be organised into groups in Cacti plugin. These appear
 			as tabs in the UI for viewing maps.
